// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > LEFT JOINs on surviving dims when some dims survive 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      "sales".region AS "sales_region",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > applies dimension filters inside the LOD CTE 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      "sales".region AS "sales_region",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    WHERE
      ((("sales".region) IN ('EMEA')))
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    WHERE
      ((("sales".region) IN ('EMEA')))
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > grand-total CTE with CROSS JOIN when all dims are ignored 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  lod_1 AS (
    SELECT
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      CROSS JOIN lod_1
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > is inert when ignored dimension is not selected 1`] = `
"SELECT
  "sales".region AS "sales_region",
  SUM("sales".total_customers) AS "sales_total_customers"
FROM
  "postgres"."jaffle"."sales" AS "sales"
GROUP BY
  1
ORDER BY
  "sales_total_customers" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > rewrites derived metric refs to CTE columns 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  lod_1 AS (
    SELECT
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers",
      (
        lod_base."sales_customers_purchasing" / lod_1."sales_total_customers"
      ) * 100 AS "sales_pct_customers_purchasing"
    FROM
      lod_base
      CROSS JOIN lod_1
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;
